# interview_assignment

./: .dockerignore  .env.example  .gitattributes  .gitignore  AI_USAGE.md  Dockerfile  README.md  pyproject.toml
configs/: example.yaml
docs/source/: conf.py  index.md
reports/: external_code_review_summary.md  failure_case_log.md  report_draft.md  submission_manifest.md
reports/latex/: README.md  references.bib  report.bbl  report.tex
scripts/: _sim_demo_common.py  run_sim_cancel_race.py  run_sim_chase.py  run_sim_create_timeout.py  run_sim_twap.py  run_testnet_chase.py  run_testnet_twap.py  sanitize_testnet_evidence.py  testnet_runner.py  verify_submission.py
src/: config.py
src/algorithms/: chase.py  twap.py
src/api/: __init__.py  app.py  runtime.py  schemas.py
src/exchanges/: base.py  binance_usdm.py  simulator.py
src/execution/: clock.py  engine.py  events.py  ids.py  models.py  service.py  state_machine.py
src/observability/: artifacts.py  logging.py  summary.py
src/risk/: decimal_math.py  validation.py
tests/: conftest.py
tests/integration/: test_binance_testnet_contract.py
tests/simulation/: test_required_scenarios.py  test_simulator_market_data.py  test_simulator_orders.py
tests/unit/: test_api.py  test_binance_adapter.py  test_binance_order_mutations.py  test_chase.py  test_clock.py  test_config.py  test_decimal_math.py  test_engine_basics.py  test_engine_exposure.py  test_engine_lifecycle.py  test_engine_review_regressions.py  test_event_serialization.py  test_exchange_contract.py  test_ids.py  test_models.py  test_observability.py  (+9 more)
(+143 files in other folders)
