[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "calais-execution-algorithm"
version = "0.1.0"
description = "Small but correct execution algorithm service for Binance USD-M BTCUSDT."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "myst-parser>=4.0.0",
    "pydata-sphinx-theme>=0.16.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "sphinx>=8.0.0",
    "sphinx-autodoc-typehints>=2.4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
